--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ languageCode = "en-us"
 disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
 googleAnalytics = ""
+relativeURLs = true
 
 [params]
   # Style options: default (pink), blue, green, pink, red, sea, violet
