--- a/config.toml
+++ b/config.toml
@@ -30,7 +30,7 @@ relativeURLs = true
      # - send a dummy email yourself to confirm your account
      # - click the confirm link in the email from www.formspree.io
      # - you're done. Happy mailing!
-  email = "frzambra@gmail.com"
+  email = "agrogeodata@gmail.com"
 
   # Nav links in the side bar
   [[params.navlinks]]
