--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
 baseurl = "/"
-title = ""
+title = "AgroGeo data: Gestión inteligente de datos geográficos para la agricultura"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
-googleAnalytics = "UA-108940548-1"
+googleAnalytics = "UA-110903546-1"
 relativeURLs = true
 
 [params]
