--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "/"
-title = "AgroGeo data: Gestión inteligente de datos geográficos para la agricultura"
+title = "Gestión inteligente de datos para el sector agrícola"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
 # Enable comments by entering your Disqus shortname
